[package]
name = "sieve"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-consensus = "0.8.1"
alloy-dyn-abi = "0.8.15"
alloy-json-abi = "0.8.15"
alloy-primitives = "0.8.15"
alloy-provider = "0.8.3"
alloy-rpc-types = "0.8.1"
alloy-rpc-types-eth = "0.8.1"
alloy-rpc-types-txpool = "0.8.1"
criterion = "0.5"
dashmap = "6.1.0"
ethabi = "18.0.0"
rand = "0.8"
rayon = "1.10.0"
serde = "1.0.216"
serde_json = "1.0.133"
tracing = "0.1.41"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "filter_bench"
harness = false

[lints.clippy]
