[package]
name = "sieve"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-consensus = "0.8.1"
alloy-dyn-abi = "0.8.15"
alloy-json-abi = "0.8.15"
alloy-primitives = "0.8.15"
alloy-provider = "0.8.3"
alloy-rpc-client = "0.8.3"
alloy-rpc-types = "0.8.1"
alloy-rpc-types-eth = "0.8.1"
alloy-rpc-types-txpool = "0.8.1"
criterion = "0.5"
dashmap = "6.1.0"
ethabi = "18.0.0"
rand = "0.8"
alloy-transport-http = "0.8.3"
async-trait = "0.1.83"
futures = "0.3.31"
pin-project-lite = "0.2.15"
rayon = "1.10.0"
reqwest = "0.12.9"
serde = "1.0.216"
serde_json = "1.0.133"
tokio = "1.42.0"
tracing = "0.1.41"
lru = "0.12.5"
tokio-stream = "0.1.17"
tracing-subscriber = "0.3.19"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "filter_bench"
harness = false

[lints.clippy]
