[package]
name = "sieve"
version = "0.1.0"
edition = "2021"

[dependencies]

# Alloy
alloy-consensus = "0.8.1"
alloy-dyn-abi = "0.8.15"
alloy-json-abi = "0.8.15"
alloy-primitives = "0.8.15"
alloy-provider = "0.8.3"
alloy-rpc-client = "0.8.3"
alloy-rpc-types = "0.8.1"
alloy-rpc-types-eth = "0.8.1"
alloy-rpc-types-txpool = "0.8.1"
alloy-transport-http = "0.8.3"
alloy-network = "0.8.3"

# data structure
dashmap = "6.1.0"
lru = "0.12.5"

# eth
ethabi = "18.0.0"

# async 
async-trait = "0.1.83"
tokio-stream = "0.1.17"
tokio = "1.42.0"
futures = "0.3.31"

# misc
rand = "0.8"
pin-project-lite = "0.2.15"
rayon = "1.10.0"
reqwest = "0.12.9"
serde = "1.0.216"
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "filter_bench"
harness = false

[lints.clippy]
